fix slide2 and slide3 alignments

--- a/infographics/static/infographics/style.css
+++ b/infographics/static/infographics/style.css
@@ -353,8 +353,14 @@ h1 {
     margin-bottom: 50px;
 }
 
-.slide svg {
+#slide1 svg {
     width: 220px;
+    height: 190px;
+}
+
+#slide2 svg,
+#slide3 svg {
+    width: 180px;
     height: 190px;
 }
 
